--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
-        "csurf": "^1.11.0",
+        "csurf": "^1.2.2",
         "dotenv": "^16.4.5",
+        "exiftool-vendored": "^29.3.0",
         "express": "^4.19.2",
         "express-rate-limit": "^7.5.0",
         "express-session": "^1.18.1",
         "formidable": "^3.5.2",
+        "morgan": "^1.10.0",
         "sharp": "^0.33.5",
         "socket.io": "^4.7.5"
     },
